# pca9635-led-controller

./: .copier-answers.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  manifest.py  micropython_pca9635.py  package.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/: README.md  conf.py  index.rst
examples/: README.md
lib/: README.md
test/: README.md  test_micropython_pca9635.py
